Update .env de exemplo e Scheduler Controller e documentação do swagger.
